# IndustrialImageGenerator

./: .gitignore  README.md  build.py  generate_logo.py  pyproject.toml
assets/: industrial_style.qss
src/: config.py  main.py
src/core/: image_generator.py
src/database/: db_manager.py  models.py
src/gui/: image_preview.py  login_dialog.py  main_window.py  param_panel.py
src/utils/: log_signal.py  logger.py  paths.py
